# pipeandfilter

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  build.sh
src/: Buffer.cpp  Buffer.h  Display.cpp  Display.h  Event.cpp  Event.h  EventBufferTest.cpp  Generator.cpp  Generator.h  IDFilter.cpp  IDFilter.h  IFilter.h  IFilterTests.cpp  IRunnable.h  Pipe.cpp  Pipe.h  Pipeline.cpp  Pipeline.h  RunnableFilter.cpp  RunnableFilter.h  generatorDisplayTests.cpp  main.cpp  main_test.cpp
